# sdtutil

./: README.md  environment.yml  pyproject.toml
src/sdtutil/: __init__.py  _openscan.py
